[04] Solve